app/style.css
@import url("https://fonts.googleapis.com/css2?family=Righteous&family=Rowdies:wght@300&display=swap");

*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}
htm {
  width: 100vw;
  height: 100vh;
}

body {
  width: 100%;
  height: 100%;
  max-height: 100vh;
  min-height: 100vh;
  max-width: 100%;
  min-width: 100%;
  overflow: hidden;
  background-color: #000;
}

.Modal {
  color: #fff;
  position: absolute;
  margin: auto;
  font-size: 1.5rem;
  z-index: 10;
  color: #efefef;
  background-color: rgba(0, 1, 37, 0.7);
  position: absolute;
  display: flex;
  text-align: center;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  inset: 0;
  cursor: pointer;
}
.hidden {
  display: none;
}

.ScoreBoard {
  color: white;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 5;
  display: flex;
  justify-content: space-between;
  padding: 0 10px;
}

span {
  font-family: "Righteous", cursive;
  font-size: 1.6rem;
  letter-spacing: 4px;
}
h4 {
  font-family: "Righteous", cursive;
  font-size: 0.9rem;
  letter-spacing: 4px;
}
[data-hi-score] {
  width: 230px;
  margin-right: 0;
}
[data-current-score] {
  width: 230px;
  margin-right: 0;
}
h2 {
  font-family: "Rowdies", cursive;
  font-size: 2.6rem;
  letter-spacing: 4px;
}

